feat: create validate for form and inform for current user

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,10 @@
     },
     "plugins": ["react", "@typescript-eslint", "prettier"],
     "rules": {
+        "import/no-extraneous-dependencies": [
+            "off",
+            { "devDependencies": false, "optionalDependencies": false, "peerDependencies": false }
+        ],
         "prefer-template": "off",
         "import/prefer-default-export": ["off"],
         "no-underscore-dangle": ["off"],
